try to fix img stretch in safari

--- a/src/components/Product.css
+++ b/src/components/Product.css
@@ -21,20 +21,22 @@
 }
 .product>.product_img {
     display: flex;
-    height: 35%;
-    object-fit: contain; 
+    height: 50%;
+    
     margin: 5%;
-    align-items: center;
+    align-items: flex-start;
 }
 
 
 .product>.product_img>img {
-    width: 100%;
-    height: 100%;
+    width:100%;
+    height: auto;
+    display:block;
 }
 
+
 .product_info {
-    height: 40%;
+    height: 30%;
     margin-bottom: 1%;
     object-fit: contain;
     flex-wrap: wrap;
